// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text deve renderizar corretamente 1`] = `
<span>
  Test 1
</span>
`;

exports[`Text deve renderizar corretamente 2`] = `
<p>
  Test with p tag
</p>
`;

exports[`Text deve renderizar corretamente 3`] = `
<span
  style="font-weight:bold"
>
  Test weight
</span>
`;

exports[`Text deve renderizar corretamente 4`] = `
<span
  style="font-size:2rem"
>
  Test size
</span>
`;

exports[`Text deve renderizar corretamente 5`] = `
<span
  style="color:#1e98ff"
>
  Test color
</span>
`;
